[project]
name = "schema-check-lambda-function"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = []

[project.scripts]
schema-check-lambda-function = "schema_check_lambda_function:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
